--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Filhos Brilhantes</title>
+    <title>Cuidado Infantil</title>
     
     <style type="text/css">
       header {
