--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 960000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 905000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -127,6 +127,12 @@
       fbq('init', '443778574234713');
       fbq('init', '353140683637066');
       fbq('init', '1006498466715983');
+      fbq('init', '568755621419541');
+      fbq('init', '592743812420393');
+      fbq('init', '607605254040464');
+      fbq('init', '401108838527600');
+      fbq('init', '829612625080571'); 
+      fbq('init', '718130866008444'); 
       fbq('track', 'PageView');
       fbq('track', 'ViewContent');
     </script>
@@ -158,4 +164,4 @@
     </script> 
 
   </body>
-</html>
+</html
